--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.6",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "indexeddb": "^0.0.0",
@@ -15,6 +16,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sha1": "^1.1.1",
+    "uuid": "^9.0.0",
     "video.js": "^8.0.4",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
