--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^1.3.6",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "download": "^8.0.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
+    "fs": "^0.0.1-security",
     "indexeddb": "^0.0.0",
     "ioredis": "^5.3.1",
     "react": "^18.2.0",
@@ -23,6 +26,9 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sha1": "^1.1.1",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "uuid": "^9.0.0",
     "video.js": "^8.0.4",
     "web-vitals": "^2.1.4",
