--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "download": "^8.0.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
-    "fs": "^0.0.1-security",
     "indexeddb": "^0.0.0",
-    "ioredis": "^5.3.1",
+    "ioredis": "^5.3.2",
+    "mongodb": "^5.3.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
@@ -25,7 +25,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "sha1": "^1.1.1",
+    "redis": "^4.6.5",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
     "util": "^0.12.5",
