--- a/package.json
+++ b/package.json
@@ -3,34 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@maxmind/geoip2-node": "^3.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "assert": "^2.0.0",
     "axios": "^1.3.6",
     "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "download": "^8.0.0",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "indexeddb": "^0.0.0",
-    "ioredis": "^5.3.2",
-    "mongodb": "^5.3.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-image-gallery": "^1.2.11",
-    "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "redis": "^4.6.5",
-    "stream-browserify": "^3.0.0",
-    "url": "^0.11.0",
-    "util": "^0.12.5",
-    "uuid": "^9.0.0",
-    "video.js": "^8.0.4",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
