--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "ioredis": "^5.3.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   }
 }
